--- a/Clouds and DevOps/Kubernetes -  Guide for Modern DevOps/02. Kubernetes vs Docker.md
+++ b/Clouds and DevOps/Kubernetes -  Guide for Modern DevOps/02. Kubernetes vs Docker.md
@@ -3,7 +3,7 @@ Containers have transformed the software development and deployment landscape, a
 
 <div align="center"> 
   <figure>
-    <img src="https://github.com/user-attachments/assets/c3b749c3-1979-4bda-8274-9400f6eec06d" alt="Kubernetes Architecture" width="100%" height="100%">
+    <img src="https://github.com/user-attachments/assets/ca34bb20-4b2b-49c6-a51e-476cb9cfdaf3" alt="Kubernetes vs Docker" width="100%" height="100%">
     <figcaption>Kubernetes vs Docker </figcaption>
   </figure>
 </div>
