Kubernetes has been added.

--- a/Tutorials/Guides and Walkthroughs/11. Kubernetes Guide.md
+++ b/Tutorials/Guides and Walkthroughs/11. Kubernetes Guide.md
@@ -1,6 +1,6 @@
 # **Kubernetes Guide**
 
-This guide is designed to take you from beginner to intermediate proficiency with Kubernetes, focusing on practical skills, hands-on experience, and best practices for deploying, managing, and scaling containerized applications in a Kubernetes environment.
+This guide is designed to help you progress from a beginner to an intermediate level of proficiency with Kubernetes, emphasizing practical skills, hands-on experience, and best practices for deploying, managing, and scaling containerized applications within a Kubernetes environment.
 
 #### **Path:**
 ```Clouds and DevOps -> Kubernetes -  Guide for Modern DevOps```
